<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_scale"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="D"
            android:textSize="40sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="right"
            android:editable="false"
            android:background="@null"
            android:textSize="40sp"
            android:maxLines="1"
            android:maxLength="64"/>


    </LinearLayout>


    <TextView
        android:id="@+id/textView_output"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="right"
        android:textSize="32sp"
        android:maxLines="1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3"
        android:padding="0dp"
        android:layout_margin="0dp">

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_toHEX"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/button_toHEX"
                android:layout_margin="0dp"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_lsh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_lsh"
                android:layout_margin="0dp"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_rsh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_rsh"
                android:layout_margin="0dp"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_not"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_not"
                android:layout_margin="0dp"
                android:background="@drawable/button_style"/>

        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_toDEC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/button_toDEC"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_or"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_or"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_xor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_xor"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_and"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_and"
                android:background="@drawable/button_style"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_toOCT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/button_toOCT"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_mod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_mod"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_copy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_copy"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_clean"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_clean"
                android:background="@drawable/button_style"/>


        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_toBIN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/button_toBIN"
                android:background="@drawable/button_style"/>
            <Button
                android:id="@+id/button_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/button_back"
                android:background="@drawable/button_style"/>


            <Button
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_add"
                android:background="@drawable/button_style"/>

        </LinearLayout>>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="0dp"
        android:background="@drawable/button_style">

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_A"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_B"
                android:background="@drawable/button_style"/>



            <Button
                android:id="@+id/button_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_7"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_8"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_9"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_sub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_sub"
                android:background="@drawable/button_style"/>
        </LinearLayout>>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_c"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_C"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_d"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_D"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_4"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_5"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_6"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_mul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_mul"
                android:background="@drawable/button_style"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_e"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_E"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_f"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_F"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_1"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_2"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_3"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_div"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_div"
                android:background="@drawable/button_style"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_brt_l"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_brt_l"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_brt_r"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_brt_r"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_sign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_sign"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_0"
                android:background="@drawable/button_style"/>

            <Button
                android:id="@+id/button_equ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/button_equ"
                android:background="@drawable/button_style"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
