<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:padding="0dp"
    android:layout_margin="0dp">

    <EditText
        android:id="@+id/editText_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="right"
        android:editable="false"
        android:background="@null"
        android:textSize="40sp"
        android:maxLines="1"
        android:maxLength="64"/>

    <TextView
        android:id="@+id/textView_output"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="right"
        android:textSize="32sp"
        android:maxLines="1"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:columnCount="6"
        android:rowCount="4"
        android:layout_margin="0dp">

        <Button
            android:id="@+id/button_toHEX"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="0"
            android:text="@string/button_toHEX"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_toDEC"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="1"
            android:text="@string/button_toDEC"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_toOCT"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="2"
            android:text="@string/button_toOCT"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_toBIN"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_row="3"
            android:text="@string/button_toBIN"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_lsh"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/button_lsh"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_rsh"
            android:layout_column="4"
            android:layout_row="0"
            android:text="@string/button_rsh"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_not"
            android:layout_column="5"
            android:layout_row="0"
            android:text="@string/button_not"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_or"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/button_or"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_xor"
            android:layout_column="4"
            android:layout_row="1"
            android:text="@string/button_xor"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_and"
            android:layout_column="5"
            android:layout_row="1"
            android:text="@string/button_and"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_mod"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/button_mod"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_copy"
            android:layout_column="4"
            android:layout_row="2"
            android:text="COP"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_clean"
            android:layout_column="5"
            android:layout_row="2"
            android:text="@string/button_clean"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_back"
            android:layout_column="3"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:text="@string/button_back"
            android:layout_margin="0dp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/button_add"
            android:layout_column="5"
            android:layout_row="3"
            android:text="@string/button_add"
            android:layout_margin="0dp"
            android:padding="0dp"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:columnCount="4"
        android:rowCount="4"
        android:layout_margin="0dp">
    </GridLayout>

</LinearLayout>